--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: Bridge To China
 description: >- # this means to ignore newlines until "baseurl:"
   Change your life. Experience a new culture. Travel the world. Join us now!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://bridge2china.co.uk" # the base hostname & protocol for your site, e.g. http://example.com
 
 logo:                  /icons/bridge.png
 
